--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="logo">
 				<a href="#">
 					<!-- <img class="logo-img" src="images/logo2.png" alt="" /> -->
-					<span class="logo-lnk">Ho Trinh Man</span>
+					<span class="logo-lnk">Tran Minh Chien</span>
 				</a>
 			</div>
 
@@ -504,7 +504,7 @@
 					<i class="icon fab fa-facebook-f"></i>
 				</a>
 				
-				<a target="_blank" href="https://github.com/HoTrinhMan">
+				<a target="_blank" href="https://github.com/chienminhtran">
 					<i class="icon fab fa-brands fa-github"></i>
 				</a>
 			</div>
