--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<!-- Background -->
 			<div class="background-bg">
 				<div class="background-filter">
-					<div class="background-img" style="background-image: url(images/hinh2.jpg);"></div>
+					<div class="background-img" style="background-image: url(images/tmc.jpg);"></div>
 				</div>
 			</div>
 
@@ -149,7 +149,7 @@
 
 						<!-- title -->
 						<h1 class="h-title">
-							Ho Trinh <br />Man
+							Tran Minh <br />Chien
 						</h1>
 
 						<!-- content started -->
@@ -476,7 +476,7 @@
 
 					<!-- contact info -->
 					<div style="float: left;" class="contact-info">
-						<div class="name">Ho Trinh Man</div>
+						<div class="name">Tran Minh Chien</div>
 						<!-- <div class="subname">Consultant & Mentor</div> -->
 						<div class="info-list">
 							<ul>
@@ -484,11 +484,11 @@
 								<li><strong>Residence:</strong> VN</li>
 								<li><strong>Freelance:</strong> Available</li>
 								<li><strong>Address:</strong> HCM City</li>
-								<li><strong>Phone:</strong> +84 522626290</li>
-								<li><strong>E-mail:</strong>hotrinhman2018@gmail.com</li>
+								<li><strong>Phone:</strong> +84 334620090</li>
+								<li><strong>E-mail:</strong>tranchien14580@gmail.com</li>
 							</ul>
 						</div>
-						<div class="author">Ho Trinh Man</div>
+						<div class="author">TranMinhChien</div>
 					</div>
 
 					<div class="clear"></div>
